force-app/main/default/objects/Quote/fields/Total_Heavy_Rehabs_Last_36_Months__c.field-meta.xml
<CustomField>
    <fullName>Total_Heavy_Rehabs_Last_36_Months__c</fullName>
    <label>Total Heavy Rehabs Last 36 Months</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>