force-app/main/default/objects/Quote/fields/Total_Multifamily_Projects_Completed__c.field-meta.xml
<CustomField>
    <fullName>Total_Multifamily_Projects_Completed__c</fullName>
    <label>Total Multifamily Projects Completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>