force-app/main/default/objects/Quote/fields/Total_Origination_Fee__c.field-meta.xml
<CustomField>
    <fullName>Total_Origination_Fee__c</fullName>
    <formula>( Loan_Amount__c * Lender_Origination__c ) + ( Loan_Amount__c * Broker_Origination__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Origination Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>