force-app/main/default/objects/Quote/fields/Total_Processing_Fee__c.field-meta.xml
<CustomField>
    <fullName>Total_Processing_Fee__c</fullName>
    <formula>Broker_Processing__c + Lender_Processing__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Processing Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>