force-app/main/default/objects/Quote/fields/Total_Properties_in_past_36_months__c.field-meta.xml
<CustomField>
    <fullName>Total_Properties_in_past_36_months__c</fullName>
    <label>Total Properties in past 36 months</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>