force-app/main/default/objects/Quote/fields/Total_Rental_Properties_Owned__c.field-meta.xml
<CustomField>
    <fullName>Total_Rental_Properties_Owned__c</fullName>
    <label>Total Rental Properties Owned</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>