force-app/main/default/objects/Quote/fields/Working_Capital__c.field-meta.xml
<CustomField>
    <fullName>Working_Capital__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Working Capital</label>
    <type>Checkbox</type>
</CustomField>