force-app/main/default/objects/Quote/recordTypes/Commercial_Bridge.recordType-meta.xml
<RecordType>
    <fullName>Commercial_Bridge</fullName>
    <active>true</active>
    <label>Commercial Bridge</label>
</RecordType>