force-app/main/default/objects/Quote/recordTypes/Commercial_Loan.recordType-meta.xml
<RecordType>
    <fullName>Commercial_Loan</fullName>
    <active>true</active>
    <label>Commercial Loan</label>
</RecordType>