force-app/main/default/objects/Quote/recordTypes/Commercial_Rental.recordType-meta.xml
<RecordType>
    <fullName>Commercial_Rental</fullName>
    <active>true</active>
    <label>Commercial Rental</label>
</RecordType>