force-app/main/default/objects/Quote/recordTypes/Multifamily_Bridge.recordType-meta.xml
<RecordType>
    <fullName>Multifamily_Bridge</fullName>
    <active>true</active>
    <label>Multifamily Bridge</label>
</RecordType>