force-app/main/default/objects/Quote/recordTypes/Multifamily_Rental.recordType-meta.xml
<RecordType>
    <fullName>Multifamily_Rental</fullName>
    <active>true</active>
    <label>Multifamily Rental</label>
</RecordType>