force-app/main/default/objects/Quote/recordTypes/Residential_Bridge.recordType-meta.xml
<RecordType>
    <fullName>Residential_Bridge</fullName>
    <active>true</active>
    <label>Residential Bridge</label>
</RecordType>