force-app/main/default/objects/Quote/recordTypes/Residential_Rental.recordType-meta.xml
<RecordType>
    <fullName>Residential_Rental</fullName>
    <active>true</active>
    <label>Residential Rental</label>
</RecordType>